--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <li><a href="canvas.html" target="">Canvas</a></li>
     <li><a href="layout.html" target="">Layout</a></li>
     <li><a href="audio.html" target="">Audio</a></li>
+    <li><a href="list.html" target="">List</a></li>
   </ul>
-  
-  
 </body>
 </html>
