--- a/audio.html
+++ b/audio.html
@@ -16,7 +16,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      background-color: rgb(2, 168, 243);
+      background-color: #02a8f3;
       border-radius: 5px;
     }
     .btn {
