--- a/appshell.html
+++ b/appshell.html
@@ -322,7 +322,7 @@
       -webkit-transform: translateX(-102%);
       transform: translateX(-102%);
       -webkit-transition: all ease 0.3s;
-      transition: all ease 0.3s;
+      transition: -webkit-transform 0.3s;
     }
 
     .side-nav__content--animatable {
@@ -720,7 +720,7 @@
       -webkit-transform: translateY(20px);
       transform: translateY(20px);
       left: 16px;
-      bottom: 16px
+      bottom: 16px;
     }
 
     .loader {
@@ -748,7 +748,7 @@
 
   </main>
 
-  <aside class="toast-view js-toast-view"></aside>
+  <aside class="toast-view js-toast-view">Message</aside>
 
   <!-- Loading Dialog For use by Activities -->
   <div class="loader js-global-loader is-hidden">
@@ -773,7 +773,7 @@
     </div>
   </section>
 
-  <aside class="toast-view js-toast-view"></aside>
+  <aside class="toast-view js-toast-view">Message</aside>
 
   <script>
     document.querySelector('.js-toggle-menu').addEventListener('click', function (evt) {
@@ -785,5 +785,6 @@
       document.querySelector('.js-side-nav-content').style['-webkit-transform'] = 'translateX(-102%)';
     });
   </script>
+</body>
 
 </html>
