--- a/appshell.html
+++ b/appshell.html
@@ -332,7 +332,7 @@
     }
 
     .side-nav__header {
-      background: url(/images/side-nav-bg@2x.jpg) #3F51B5;
+      background: url(images/side-nav-bg@2x.jpg) #3F51B5;
       background-size: cover;
       width: 100%;
       height: 171px;
@@ -375,17 +375,17 @@
       text-align: left;
       display: block;
       border: none;
-      background: url(/images/ic_delete_24px.svg) 16px 12px no-repeat;
+      background: url(images/ic_delete_24px.svg) 16px 12px no-repeat;
       color: rgba(0, 0, 0, .87);
       cursor: pointer
     }
 
     .side-nav__delete-all {
-      background-image: url(/images/ic_restore_24px.svg)
+      background-image: url(images/ic_restore_24px.svg)
     }
 
     .side-nav__blog-post {
-      background-image: url(/images/ic_info_outline_24px.svg);
+      background-image: url(images/ic_info_outline_24px.svg);
       line-height: 48px;
       text-decoration: none
     }
@@ -396,7 +396,7 @@
     }
 
     .side-nav__file-bug-report {
-      background-image: url(/images/ic_feedback_24px.svg);
+      background-image: url(images/ic_feedback_24px.svg);
       line-height: 48px;
       text-decoration: none
     }
@@ -417,7 +417,7 @@
     }
 
     .superfail .main {
-      background: url(/images/superfail.svg) center center no-repeat
+      background: url(images/superfail.svg) center center no-repeat
     }
 
     .empty-set-cta {
@@ -516,7 +516,7 @@
     }
 
     .header__menu {
-      background: url(/images/ic_menu_24px.svg) center center no-repeat;
+      background: url(images/ic_menu_24px.svg) center center no-repeat;
       width: 24px;
       height: 24px;
       margin-right: 16px;
