--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <li><a href="audio.html" target="">Audio</a></li>
     <li><a href="list.html" target="">List</a></li>
     <li><a href="inputbox.html" target="">Input</a></li>
+    <li><a href="appshell.html" target="">Input</a></li>
   </ul>
 </body>
 </html>
