--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <li><a href="list.html" target="">List</a></li>
     <li><a href="inputbox.html" target="">Input</a></li>
     <li><a href="appshell.html" target="">App Shell</a></li>
+    <li><a href="indexeddb.html" target="">IndexedDB</a></li>
   </ul>
 </body>
 </html>
