--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <li><a href="layout.html" target="">Layout</a></li>
     <li><a href="audio.html" target="">Audio</a></li>
     <li><a href="list.html" target="">List</a></li>
+    <li><a href="widget.html" target="">Widget</a></li>
     <li><a href="inputbox.html" target="">Input</a></li>
     <li><a href="appshell.html" target="">App Shell</a></li>
     <li><a href="indexeddb.html" target="">IndexedDB</a></li>
