--- a/videocapture.html
+++ b/videocapture.html
@@ -7,7 +7,7 @@
   <title>Vide Capture</title>
 </head>
 <body>
-  <video id="camera" width="300px" height="300px"></video>
+  <video id="camera" style="width: 300px; height: 300px;"></video>
 
   <script>
     var constraints = {video: true};
