--- a/videocapture.html
+++ b/videocapture.html
@@ -5,22 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Vide Capture</title>
+  <style>
+    html { height: 100%; overflow: hidden; }
+    body { height: 100%; }
+    #camera { height: 100%; width: 100%; }
+  </style>
 </head>
 <body>
-  <video id="camera" style="width: 300px; height: 300px; background-color: red;"></video>
-
+  <video id="camera"></video>
   <script>
     var constraints = {video: true};
 
     function onSuccess(stream) {
       var video = document.querySelector("#camera");
       video.srcObject = stream;
-      alert("success");
       video.autoplay = true;
     }
 
     function onError(error) {
-      alert(error);
       console.log("navigator.getUserMedia error: ", error);
     }
 
