--- a/videocapture.html
+++ b/videocapture.html
@@ -8,7 +8,7 @@
   <style>
     html { height: 100%; overflow: hidden; }
     body { height: 100%; }
-    #camera { height: 100%; width: 100%; }
+    #camera { height: 100%; width: 100%; background-color: red; }
   </style>
 </head>
 <body>
