--- a/videocapture.html
+++ b/videocapture.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <video id="camera" width="100%" height="100%"></video>
+  <video id="camera" width="1080px" height="1920px"></video>
   <script>
     var constraints = {video: true};
 
