--- a/videocapture.html
+++ b/videocapture.html
@@ -6,13 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Vide Capture</title>
   <style>
-    html { height: 100%; overflow: hidden; }
-    body { height: 100%; }
-    #camera { height: 100%; width: 100%; background-color: red; }
+    #camera { position: absolute; top: 0; left: 0; bottom: 0; right: 0; background-color: red; }
   </style>
 </head>
 <body>
-  <video id="camera" width="1080px" height="1920px"></video>
+  <video id="camera"></video>
   <script>
     var constraints = {video: true};
 
