--- a/videocapture.html
+++ b/videocapture.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Vide Capture</title>
   <style>
-    #camera { position: absolute; top: 0; left: 0; bottom: 0; right: 0; background-color: red; }
+    #camera { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: red; }
   </style>
 </head>
 <body>
