--- a/videocapture.html
+++ b/videocapture.html
@@ -15,8 +15,8 @@
     var constraints = {
       audio: true,
       video: {
-        width: { min: 1280 },
-        height: { min: 720 }
+        width: 1920,
+        height: 1080
       }
     };
 
