--- a/videocapture.html
+++ b/videocapture.html
@@ -57,7 +57,7 @@
       console.log(mediaRecorder.state);
       console.log("recorder stopped");
       document.querySelector("#videocam").style.display = "block";
-      document.querySelector("#videocam_off").style.display = "none;";
+      document.querySelector("#videocam_off").style.display = "none";
     }
 
     navigator.getUserMedia(constraints, onSuccess, onError);
