--- a/editarea.html
+++ b/editarea.html
@@ -40,6 +40,11 @@
       justify-content: flex-start;
       align-items: center;
       border-bottom: 1px dashed #000;
+      cursor: none;
+    }
+    .edit-cursor-container:focus {
+      outline: 0px solid transparent;
+      border-color: #008080;
     }
     .edit-cursor {
       position: absolute;
@@ -60,11 +65,11 @@
   <div
     class="edit-area"
     tabindex="0"
-    @keyup="onKeyDown"
-    @click="onClick">
+    @keyup="onKeyUp">
     <span
       v-if="cursorIdx == 0"
-      class="edit-cursor-container">
+      class="edit-cursor-container"
+      contenteditable="true">
       {{ phrase }}
       <span class="edit-cursor"></span>
     </span>
@@ -80,10 +85,12 @@
       <div class="br" v-if="data.type == '99'">&nbsp;</div>
       <span
         v-if="$index + 1 == cursorIdx"
-        class="edit-cursor-container">
+        class="edit-cursor-container"
+        contenteditable="true"
+        @keyup.stop
+        @keydown.stop="onInput">
         {{ phrase }}
-        <span class="edit-cursor"></span>
-        <input id="input" style="position: absolute; left: 0; right: 0; top: 0; bottom: 0; opacity: 0;">
+        <span class="edit-cursor" contenteditable="false"></span>
       </span>
     </template>
   </div>
@@ -128,7 +135,7 @@
         this.cursorIdx = this.explodedlist.length;
       },
       methods: {
-        onKeyDown ($event) {
+        onKeyUp ($event) {
           console.log($event, this.dataIdx, this.inIdx);
           switch($event.key) {
             case 'Backspace':
@@ -171,24 +178,29 @@
                 this.datalist.push({ type: '99' });
                 this.cursorIdx += 1;
               } else {
-                this.appendText();
+                this.appendText(this.phrase);
               }
               this.phrase = '';
               break;
-            case ' ':
-              this.phrase = document.querySelector('#input').value;
-              document.querySelector('#input').value = "";
-              break;
+            // case ' ':
+            //   this.phrase = document.querySelector('#input').value;
+            //   document.querySelector('#input').value = "";
+            //   break;
             // case 'Unidentified':
             //   this.phrase = document.querySelector('#input').value;
             //   document.querySelector('#input').value = "";
             //   break;
             default:
-              this.phrase += $event.key;
+              // this.phrase += $event.key;
           }
         },
-        onClick () {
-          document.querySelector('#input').focus();
+        onInput ($event) {
+          if ($event.keyCode == 13) {
+            $event.preventDefault();
+            this.appendText($event.target.innerText);
+            $event.target.innerText = '';
+            return;
+          }
         },
         setCursor ($index, $event) {
           this.phrase = '';
@@ -198,16 +210,16 @@
             this.cursorIdx = $index;
           }
         },
-        appendText () {
+        appendText (text) {
           let data = this.datalist[this.dataIdx];
           if (data && data.type == '1') {
             let chars = data.value.split('');
-            chars.splice(this.inIdx + 1, 0, this.phrase);
+            chars.splice(this.inIdx + 1, 0, text);
             data.value = chars.join('');
           } else {
-            this.datalist.splice(this.dataIdx + 1, 0, { type: '1', value: this.phrase });
+            this.datalist.splice(this.dataIdx + 1, 0, { type: '1', value: text });
           }
-          this.cursorIdx += this.phrase.length;
+          this.cursorIdx += text.length;
         }
       },
       computed: {
